--- a/Tower defence/test/Elements of the elements_Data/boot.config
+++ b/Tower defence/test/Elements of the elements_Data/boot.config
@@ -1,8 +1,9 @@
 player-connection-mode=Listen
-player-connection-guid=223662504
+player-connection-guid=1581227313
 player-connection-debug=0
 player-connection-ip=25.29.88.73
 player-connection-ip=192.168.0.200
+player-connection-ip=192.168.56.1
 gfx-enable-native-gfx-jobs=
 wait-for-native-debugger=0
 scripting-runtime-version=latest
